k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-app
  namespace: default
  labels:
    app: backend-app
spec:
  selector:
    matchLabels:
      app: backend-app
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: backend-app
        image: rasyar/todo-backend:19.0
        resources:
          requests:
            cpu: 100m
            memory: 150Mi
          limits:
            cpu: 300m
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 3100
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 3100
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 3100
---

apiVersion: v1
kind: Service
metadata:
  name: backend-app-service
  namespace: default
spec:
  selector:
    app: backend-app
  type: ClusterIP
  ports:
  - name: backend-app-service
    protocol: TCP
    port: 3100
    targetPort: 3100
