k8s/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: default
  labels:
    app: mongo-express
spec:
  selector:
    matchLabels:
      app: mongo-express
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express:1.0.2
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/healthz
            port: 8081
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8081
          name: mongo-express
---

apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: default
spec:
  selector:
    app: mongo-express
  type: NodePort
  ports:
  - name: mongo-express-service
    protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30001
