k8s/mongodb.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-statefulset
  namespace: default
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: "mongodb-headless-service"
  replicas: 3
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: mongodb
        image: mongo:8.2-noble
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongodb-persistent-storage
          mountPath: /data/db
        readinessProbe:
          exec:
            command:
            - mongosh
            - --eval
            - "db.adminCommand('ping')"
          initialDelaySeconds: 10
          timeoutSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: mongodb-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: local-path
      resources:
        requests:
          storage: 1Gi
---

apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless-service
  namespace: default
spec:
  selector:
    app: mongodb
  clusterIP: None
  ports:
  - name: mongodb-service
    protocol: TCP
    port: 27017
    targetPort: 27017
---
